<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">PicSync Beta</string>
    <string name="title_activity_settings">PicSync Beta</string>
    <string name="title_activity_add_account">Sign In</string>
    <string name="title_activity_webview">Web Activity</string>
    <string name="title_activity_rename_folder_activtiy">Rename Camera Uploads Folder</string>
    <string name="title_activity_webview_privacy_policy">Privacy Policy</string>
    <string name="title_activity_webview_terms">Terms of Service</string>

    <!-- Settings -->
    <string name="pref_category_account">Account</string>
    <string name="pref_title_remove_account">Sign Out</string>
    <string name="pref_summary_current_account">Currently signed in as %1$s</string>
    <string name="pref_category_status">Status</string>
    <string name="pref_title_upload_status_uploading">Uploading</string>
    <string name="pref_title_upload_status_uploads_finished">Uploads Finished</string>
    <string name="pref_title_upload_status_uploads_pending">Uploads Pending</string>
    <string name="pref_summary_upload_status_uploads_failed">An error occurred during upload. Uploading will continue later.</string>
    <string name="pref_title_upload_status_uploading_scanning">Scanning</string>
    <string name="pref_summary_upload_status_uploading_scanning">Scanning for media files</string>
    <string name="pref_summary_upload_status_uploading_x_of_y">Uploading %1$d of %2$d</string>
    <string name="pref_summary_upload_status_uploading_pending_for_wifi">Waiting for a wifi connection</string>
    <string name="pref_summary_upload_status_uploading_pending_for_power">Waiting for the device to be plugged into a power source</string>
    <string name="pref_summary_upload_status_uploading_pending_for_network">Waiting for a network connection</string>
    <string name="pref_summary_upload_status_uploading_pending_for_both">Waiting for a wifi connection and for the device to be plugged into a power source</string>
    <string name="pref_category_settings">Settings</string>
    <string name="pref_title_settings_wifi_only">Upload when on WiFi</string>
    <string name="pref_summary_settings_wifi_only">Only upload files when connected to a wifi network</string>
    <string name="pref_title_settings_charging_only">Upload when charging</string>
    <string name="pref_summary_settings_charging_only">Only upload files when connected to a power source</string>
    <string name="pref_title_settings_rename_uploads_folder">Rename Uploads Folder</string>
    <string name="pref_summary_settings_rename_uploads_folder">Rename the folder which files are uploaded to. The default is \'Camera Uploads\'</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_title_others_version">App Version</string>
    <string name="pref_title_others_darrenmowat">Developed by Darren Mowat</string>
    <string name="pref_title_others_terms">Terms of Service</string>
    <string name="pref_title_others_privacy">Privacy Policy</string>
    <string name="pref_title_others_feedback">Send Feedback</string>
    <string name="pref_summary_others_feedback">Tell us what you love, hate or what you\'d like to see next</string>

    <!-- Notifications -->

    <string name="notif_account_error_title">Account Error</string>
    <string name="notif_account_error_text">There was a problem with the account %1$s. Please click here to fix it.</string>

    <!-- Auth -->
    <string name="auth_signing_in">Signing In</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_about_text">        Click Sign In below to choose which Google account PicSync should upload your photos to.
        \n\nBy clicking sign in you must agree to our Terms of Service &amp; Privacy Policy which can be viewed from the menu. </string>

    <!-- Rename -->
    <string name="rename_button">Rename</string>
    <string name="rename_progress">Renaming</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_set_folder_name">Set Uploads Folder Name</string>
    
    <!-- Background -->    
    <string name="uploads_folder_name">Camera Uploads</string>
    
    
    

</resources>