<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/authDescText"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/auth_about_text" />

    <ProgressBar
        android:id="@+id/authProgressSpinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/authSigningInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authProgressSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/auth_signing_in" />

    <Button
        android:id="@+id/authSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authDescText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6.0dip"
        android:text="@string/auth_sign_in" />

</RelativeLayout>